split the regular and travis tests out

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 sudo: required
 language: ruby
-script: "make -C puppet test"
+script: "make -C puppet testtravis"
 matrix:
   fast_finish: true
   include:
