--- a/puppet/Gemfile
+++ b/puppet/Gemfile
@@ -11,3 +11,4 @@ gem "rspec_junit_formatter"
 gem "rspec-puppet"
 gem "puppetlabs_spec_helper"
 gem "librarian-puppet", "1.3.2"
+gem "parallel_tests", "2.9.0"
