--- a/puppet/Gemfile
+++ b/puppet/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 
 if ENV.key?('PUPPET_GEM_VERSION')
-  puppetversion = "= #{ENV['PUPPET_GEM_VERSION']}"
+  gem "puppet", "#{ENV['PUPPET_GEM_VERSION']}"
 end
 
 gem "serverspec"
