--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ matrix:
     env: PUPPET_GEM_VERSION="~> 3.4.3"
   - rvm: 2.3.1
     env: PUPPET_GEM_VERSION="~> 3.8.5"
-#  - rvm: 2.3.1
-#    env: PUPPET_GEM_VERSION="~> 3.8.5" FUTURE_PARSER="yes"
-#  - rvm: 2.3.1
-#    env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes"
+  - rvm: 2.3.1
+    env: PUPPET_GEM_VERSION="~> 3.8.5" FUTURE_PARSER="yes"
+  - rvm: 2.3.1
+    env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes"
 notifications:
   email: false
